tests/ui/impl-restriction/recover-incorrect-impl-restriction.without_gate.stderr
error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:9:14
   |
LL |     pub impl(crate::foo) trait Baz {}
   |              ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub impl(in crate::foo) trait Baz {}
   |              ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:11:21
   |
LL |     pub unsafe impl(crate::foo) trait BazUnsafe {}
   |                     ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub unsafe impl(in crate::foo) trait BazUnsafe {}
   |                     ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:13:19
   |
LL |     pub auto impl(crate::foo) trait BazAuto {}
   |                   ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub auto impl(in crate::foo) trait BazAuto {}
   |                   ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:15:20
   |
LL |     pub const impl(crate::foo) trait BazConst {}
   |                    ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub const impl(in crate::foo) trait BazConst {}
   |                    ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:17:27
   |
LL |     pub const unsafe impl(crate::foo) trait BazConstUnsafe {}
   |                           ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub const unsafe impl(in crate::foo) trait BazConstUnsafe {}
   |                           ++

error: incorrect `impl` restriction
  --> $DIR/recover-incorrect-impl-restriction.rs:19:26
   |
LL |     pub unsafe auto impl(crate::foo) trait BazUnsafeAuto {}
   |                          ^^^^^^^^^^
   |
   = help: some possible `impl` restrictions are:
           `impl(crate)`: can only be implemented in the current crate
           `impl(super)`: can only be implemented in the parent module
           `impl(self)`: can only be implemented in current module
           `impl(in path::to::module)`: can only be implemented in the specified path
help: help: use `in` to restrict implementations to the path `crate::foo`
   |
LL |     pub unsafe auto impl(in crate::foo) trait BazUnsafeAuto {}
   |                          ++

error[E0658]: `impl` restrictions are experimental
  --> $DIR/recover-incorrect-impl-restriction.rs:9:9
   |
LL |     pub impl(crate::foo) trait Baz {}
   |         ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/recover-incorrect-impl-restriction.rs:11:16
   |
LL |     pub unsafe impl(crate::foo) trait BazUnsafe {}
   |                ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/recover-incorrect-impl-restriction.rs:13:14
   |
LL |     pub auto impl(crate::foo) trait BazAuto {}
   |              ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/recover-incorrect-impl-restriction.rs:15:15
   |
LL |     pub const impl(crate::foo) trait BazConst {}
   |               ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/recover-incorrect-impl-restriction.rs:17:22
   |
LL |     pub const unsafe impl(crate::foo) trait BazConstUnsafe {}
   |                      ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `impl` restrictions are experimental
  --> $DIR/recover-incorrect-impl-restriction.rs:19:21
   |
LL |     pub unsafe auto impl(crate::foo) trait BazUnsafeAuto {}
   |                     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0658`.
